test_regress/t/t_tri_array.out
%Error-UNSUPPORTED: t/t_tri_array.v:24:17: Unsupported LHS tristate construct: ARRAYSEL
                                         : ... note: In instance 't'
   24 |         .pad(pad[g]),
      |                 ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tri_array.v:29:17: Unsupported LHS tristate construct: ARRAYSEL
                                         : ... note: In instance 't'
   29 |         .pad(pad[g]),
      |                 ^
%Error: Exiting due to
